--- a/app/src/main/res/layout/fragment_profile_teacher.xml
+++ b/app/src/main/res/layout/fragment_profile_teacher.xml
@@ -38,13 +38,13 @@
 
 
             <ImageView
-                android:id="@+id/add_friend"
+                android:id="@+id/add_teacher"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_toLeftOf="@+id/drop_down_option_menu"
-                android:src="@drawable/ic_action_user_add" />
+                android:src="@drawable/addt" />
 
             <ImageView
                 android:id="@+id/drop_down_option_menu"
