--- a/app/src/main/res/layout/fragment_find.xml
+++ b/app/src/main/res/layout/fragment_find.xml
@@ -1,5 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
 
@@ -8,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp">
-        <EditText android:id="@+id/input_speciality"
+        <AutoCompleteTextView android:id="@+id/input_speciality"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
@@ -31,13 +33,18 @@
             android:text="50"/>
     </android.support.design.widget.TextInputLayout>
 
-    <android.support.v7.widget.AppCompatButton
+    <info.hoang8f.widget.FButton
         android:id="@+id/btn_find"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:layout_marginBottom="24dp"
         android:padding="12dp"
+        fbutton:shadowEnabled="true"
+        fbutton:buttonColor="#CFD8DC"
+        fbutton:shadowColor="#90A4AE"
+        fbutton:shadowHeight="5dp"
+        fbutton:cornerRadius="5dp"
         android:text="Search"/>
 
 </LinearLayout>
