--- a/app/src/main/res/layout/chat_singlemessage.xml
+++ b/app/src/main/res/layout/chat_singlemessage.xml
@@ -13,10 +13,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="5dip"
+            android:layout_margin="5dp"
             android:background="@drawable/bubble_b"
-            android:paddingLeft="10dip"
+            android:paddingLeft="10dp"
             android:text="Hello bubbles!"
+            android:elevation="2dp"
             android:textColor="@android:color/primary_text_light" />
     </LinearLayout>
 
