--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -8,6 +8,8 @@
         android:id="@+id/listView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:dividerHeight="0dp"
+        android:divider="@null"
         android:layout_marginBottom="80dp">
     </ListView>
 
