--- a/app/src/main/res/layout/fragment_profile_teacher.xml
+++ b/app/src/main/res/layout/fragment_profile_teacher.xml
@@ -44,7 +44,7 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_toLeftOf="@+id/drop_down_option_menu"
-                android:src="@drawable/addt" />
+                android:src="@drawable/user_add" />
 
             <ImageView
                 android:id="@+id/chat"
@@ -53,7 +53,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="16dp"
-                android:src="@drawable/ic_action_overflow" />
+                android:src="@drawable/chat" />
 
             <TextView
                 android:id="@+id/user_profile_name"
