--- a/app/src/main/res/layout/fragment_find.xml
+++ b/app/src/main/res/layout/fragment_find.xml
@@ -31,7 +31,19 @@
             android:textColor="@color/black"
             android:hint="Price"
             android:text="50"/>
+
     </android.support.design.widget.TextInputLayout>
+
+    <RatingBar
+        android:layout_marginTop="10dp" android:layout_marginBottom="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:id="@+id/dialog_ratingbar"
+        android:layout_gravity="center"
+        android:numStars="5" android:stepSize="0.2"
+        android:rating="2"
+        android:isIndicator="false"/>
 
     <info.hoang8f.widget.FButton
         android:id="@+id/btn_find"
