--- a/app/src/main/res/layout/fragment_profile_teacher.xml
+++ b/app/src/main/res/layout/fragment_profile_teacher.xml
@@ -45,6 +45,14 @@
                 android:layout_marginTop="16dp"
                 android:layout_toLeftOf="@+id/drop_down_option_menu"
                 android:src="@drawable/user_add" />
+            <ImageView
+                android:id="@+id/rateteacher"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_toRightOf="@+id/add_teacher"
+                android:src="@drawable/logo" />
 
             <ImageView
                 android:id="@+id/chat"
@@ -54,6 +62,7 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="16dp"
                 android:src="@drawable/chat" />
+
 
             <TextView
                 android:id="@+id/user_profile_name"
@@ -76,6 +85,20 @@
                 android:text="Android free tutorials and example"
                 android:textColor="#fff"
                 android:textSize="14sp" />
+            <RatingBar
+                android:layout_marginTop="20dp" android:layout_marginBottom="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="10dp"
+                android:id="@+id/TeacherRating"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@id/user_profile_name"
+                android:layout_gravity="center"
+                android:numStars="5" android:stepSize="0.2"
+                android:rating="2"
+                android:isIndicator="true"
+
+                android:theme="@style/RatingBar"/>
         </RelativeLayout>
 
 
