--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,8 +7,14 @@
         <item name="colorPrimaryDark">#1e516c</item>
         <item name="colorAccent">#1e516c</item>
 
+
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="RatingBar" parent="Theme.AppCompat">
+        <item name="colorControlNormal">#ffffff</item>
+        <item name="colorControlActivated">#DAA520</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
