--- a/app/src/main/res/layout/fragment_feedback.xml
+++ b/app/src/main/res/layout/fragment_feedback.xml
@@ -2,15 +2,36 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="@drawable/background"
     android:orientation="vertical" >
+
+    <com.flaviofaria.kenburnsview.KenBurnsView
+        android:id="@+id/header_cover_image"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:background="@drawable/background"
+        android:scaleType="centerCrop"
+        android:src="@drawable/feedme" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:paddingTop="0.5dp"
+        android:layout_below="@id/header_cover_image"
+        android:background="#1e516c"/>
 
     <ListView
         android:id="@+id/list_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:dividerHeight="0dp"
+        android:layout_below="@id/header_cover_image"
+        android:layout_height="match_parent"
+        android:divider="#1e516c"
+        android:dividerHeight="2dp"
         android:layout_marginBottom="80dp">
     </ListView>
+
+
+
 
     <RelativeLayout
         android:id="@+id/form"
@@ -19,6 +40,14 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:orientation="vertical" >
+
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:paddingTop="0.5dp"
+            android:layout_above="@id/chatText"
+            android:background="#1e516c"/>
 
         <EditText
             android:layout_width="wrap_content"
