--- a/app/src/main/res/layout/one_teacher.xml
+++ b/app/src/main/res/layout/one_teacher.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+ <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -25,7 +25,9 @@
                 android:layout_height="@dimen/album_cover_height"
 android:padding="0.5dp"
                 android:background="#000000"
-                android:scaleType="fitXY" />
+
+
+                android:scaleType="fitCenter" />
 
             <TextView
                 android:id="@+id/name"
