--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,9 +6,15 @@
     <color name="grey">#FF888DB1</color>
     <color name="primary">#FFFFFF</color>
     <color name="primary_dark">#E12929</color>
+    <color name="light_grey">#F6F6F6</color>
     <color name="primary_darker">#00458a</color>
     <color name="accent">#00abdf</color>
     <color name="global">#1e516c</color>
+
+    <color name="translucent_scrim_top">#26000000</color>
+    <color name="translucent_scrim_top_center">#0C000000</color>
+    <color name="translucent_scrim_bottom">#2A000000</color>
+    <color name="translucent_scrim_bottom_center">#0D000000</color>
 
     <color name="black">#000000</color>
     <color name="jet">#222222</color>
