--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -1,25 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical">
 
     <ListView
         android:id="@+id/listView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:scrollbars="none"
+        android:isScrollContainer="true"
         android:dividerHeight="0dp"
         android:divider="@null"
         android:layout_marginBottom="80dp">
     </ListView>
-
-    <RelativeLayout
-        android:id="@+id/form"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:orientation="vertical" >
 
         <EditText
             android:layout_width="wrap_content"
@@ -32,14 +27,16 @@
             android:layout_alignParentStart="true"
             android:layout_toLeftOf="@+id/buttonSend" />
 
-        <Button
+        <at.markushi.ui.CircleButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Send"
+            cb_color="#99CC00"
+            cb_pressedRingWidth="8dip"
+            android:src="@drawable/send"
             android:id="@+id/buttonSend"
             android:layout_alignBottom="@+id/chatText"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
-    </RelativeLayout>
 
 </RelativeLayout>
