--- a/app/src/main/res/layout/fragment_student_pending.xml
+++ b/app/src/main/res/layout/fragment_student_pending.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="4dp"
-
-    android:background="#ffffff"
+    android:background="@color/light_grey"
     >
 
     <android.support.v7.widget.RecyclerView
