--- a/app/src/main/res/layout/fragment_student_refused.xml
+++ b/app/src/main/res/layout/fragment_student_refused.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:padding="4dp"
 
-    android:background="#ffffff"
+    android:background="@color/light_grey"
     >
 
     <android.support.v7.widget.RecyclerView
