--- a/app/src/main/res/layout/fragment_student_request_list.xml
+++ b/app/src/main/res/layout/fragment_student_request_list.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-android:padding="4dp"
+    android:padding="4dp"
 
-    android:background="#ffffff"
+    android:background="@color/light_grey"
     >
 
     <android.support.v7.widget.RecyclerView
