--- a/app/src/main/res/layout/onediscussion.xml
+++ b/app/src/main/res/layout/onediscussion.xml
@@ -26,8 +26,11 @@
                 android:id="@+id/person_photo"
                 android:tag="image_tag"
                 android:layout_width="30dp"
-                android:layout_height="120dp"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:background="@drawable/backgroudimage"
                 android:layout_margin="5dp"
+                android:padding="1dp"
                 android:layout_weight="1"
                 android:src="@drawable/ic_launcher"/>
 
@@ -43,8 +46,7 @@
                     android:id="@+id/sender_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="10dp"
+                    android:layout_margin="3dp"
                     android:text="Android Name"
                     android:textAppearance="?android:attr/textAppearanceLarge"/>
 
@@ -52,8 +54,8 @@
                     android:id="@+id/datesent"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="10dp"
+
+                    android:layout_margin="3dp"
 
                     android:text="Android Version"
                     android:textAppearance="?android:attr/textAppearanceMedium"/>
