fonts changedmy teachers added

--- a/app/src/main/res/layout/fragment_myprofile_teacher.xml
+++ b/app/src/main/res/layout/fragment_myprofile_teacher.xml
@@ -37,14 +37,6 @@
             android:paddingBottom="24dp">
 
 
-            <ImageView
-                android:id="@+id/add_friend"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_toLeftOf="@+id/drop_down_option_menu"
-                android:src="@drawable/ic_action_user_add" />
 
             <ImageView
                 android:id="@+id/drop_down_option_menu"
@@ -53,7 +45,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="16dp"
-                android:src="@drawable/ic_action_overflow" />
+                android:src="@drawable/calender" />
 
             <TextView
                 android:id="@+id/user_profile_name"
