--- a/app/src/main/res/animator/slide_in.xml
+++ b/app/src/main/res/animator/slide_in.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android" >
-
-    <objectAnimator
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:duration="500"
-        android:propertyName="x"
-        android:valueFrom="0"
-        android:valueTo="-1000"
-        android:valueType="floatType" />
-
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+android:fillAfter="true" >
+<objectAnimator
+    android:duration="900"
+    android:propertyName="y"
+    android:valueFrom="20"
+    android:valueTo="-1280"
+    android:valueType="floatType" />
 </set>
