--- a/app/src/main/res/animator/slide_out.xml
+++ b/app/src/main/res/animator/slide_out.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android" >
-
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+    android:fillAfter="true" >
     <objectAnimator
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:duration="500"
-        android:propertyName="x"
-        android:valueFrom="1000"
-        android:valueTo="0"
+        android:duration="900"
+        android:propertyName="y"
+        android:valueFrom="1280"
+        android:valueTo="20"
         android:valueType="floatType" />
-
 </set>
