--- a/app/src/main/res/layout/fragment_update_profile_teacher.xml
+++ b/app/src/main/res/layout/fragment_update_profile_teacher.xml
@@ -8,9 +8,9 @@
 
     <ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:fitsSystemWindows="true">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="false">
 
         <LinearLayout
             android:orientation="vertical"
