--- a/app/src/main/res/layout/updateprofile.xml
+++ b/app/src/main/res/layout/updateprofile.xml
@@ -1,16 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_update_pro_teacher"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    android:fitsSystemWindows="false">
 
-    <ScrollView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:fitsSystemWindows="true">
+
 
         <LinearLayout
             android:orientation="vertical"
@@ -112,4 +107,4 @@
 
         </LinearLayout>
     </ScrollView>
-</RelativeLayout>
+
