--- a/app/src/main/res/layout/ratingbar.xml
+++ b/app/src/main/res/layout/ratingbar.xml
@@ -21,10 +21,11 @@
         android:rating="2"
         android:isIndicator="false"/>
 
-    <Button android:id="@+id/rank_dialog_button"
+    <android.support.v7.widget.AppCompatButton
+        android:id="@+id/rank_dialog_button"
         android:layout_height="wrap_content"
         android:text="Update"  android:focusable="false"
-        android:layout_margin="5dip" android:textColor="#FFF8C6"
+        android:layout_margin="5dip" android:textColor="#ffffff"
         android:textSize="20dip" android:layout_width="fill_parent" />
 
 </LinearLayout>
