fonts changedmy teachers added

--- a/app/src/main/res/layout/fragment_teacher_request_tab.xml
+++ b/app/src/main/res/layout/fragment_teacher_request_tab.xml
@@ -33,7 +33,7 @@ android:id="@+id/content_teacher"
                 android:minHeight="0dp"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-            <com.flaviofaria.kenburnsview.KenBurnsView
+            <ImageView
                 android:src="@drawable/learn"
                 app:layout_scrollFlags="scroll"
                 android:layout_width="wrap_content"
