--- a/app/src/main/res/layout/requestdialog.xml
+++ b/app/src/main/res/layout/requestdialog.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="250dp"
 
-    android:layout_height="match_parent">
+    android:layout_height="150dp">
 
     <Spinner
         android:id="@+id/spinner"
-        android:layout_width="fill_parent"
-        android:spinnerMode="dialog"
+        android:layout_width="match_parent"
+        android:spinnerMode="dropdown"
         android:layout_height="wrap_content"
         android:entries="@array/category"
  android:paddingBottom="20dp"
@@ -15,11 +17,22 @@
 
 
 
-    <android.support.v7.widget.AppCompatButton
+    <info.hoang8f.widget.FButton
         android:text="Send Request"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="2dp"
+        fbutton:shadowEnabled="true"
+        fbutton:buttonColor="#292828"
+        android:layout_alignParentBottom="true"
+        fbutton:shadowColor="#BCC6CC"
+        android:textColor="#ffffff"
+        android:includeFontPadding="false"
+        fbutton:shadowHeight="6dp"
+        fbutton:cornerRadius="10dp"
+        android:gravity="center"
         android:id="@+id/start" />
 
 
-</LinearLayout>
+</RelativeLayout>
