--- a/app/src/main/res/layout/fragment_tabr_request.xml
+++ b/app/src/main/res/layout/fragment_tabr_request.xml
@@ -30,7 +30,7 @@
             android:minHeight="0dp"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-            <com.flaviofaria.kenburnsview.KenBurnsView
+            <ImageView
                 android:src="@drawable/learn"
                 app:layout_scrollFlags="scroll"
                 android:layout_width="wrap_content"
