--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,6 +17,11 @@
         <item name="colorControlActivated">#DAA520</item>
     </style>
 
+    <style name="RatingBar2" parent="Theme.AppCompat">
+        <item name="colorControlNormal">#dac8a5</item>
+        <item name="colorControlActivated">#DAA520</item>
+    </style>
+
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
@@ -28,6 +33,7 @@
 
     <style name="Theme_Dialog" parent="android:Theme.Light">
         <item name="android:windowNoTitle">true</item>
+
     </style>
 
     <style name="AppTheme.Dark" parent="Theme.AppCompat.NoActionBar">
@@ -49,6 +55,7 @@
         <item name="colorAccent">@color/white</item>
         <item name="android:textColorPrimary">@color/iron</item>
         <item name="android:background">@color/primary</item>
+        <item name="windowNoTitle">false</item>
     </style>
 
     <array name="rainbow">
