--- a/app/src/main/res/layout/onefeedback.xml
+++ b/app/src/main/res/layout/onefeedback.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
+    android:background="@color/light_grey"
     android:padding="7dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -16,7 +17,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="7dp">
 
@@ -32,7 +33,8 @@
             android:id="@+id/owner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
+            android:textColor="#FF607D8B"
+            android:textAppearance="?android:attr/textAppearanceMedium"
             android:paddingTop="5dp"
             android:textSize="12sp" />
 
